--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
+displayName=Resting Buff
+author=SifuPlankton
 description=An example greeter plugin
 tags=
-plugins=com.example.ExamplePlugin
+plugins=com.restingbuff.RestingBuffPlugin
